2018-01-19  NIIBE Yutaka  <gniibe@fsij.org>

	* src/binary-edit.sh: Copied from NeuG 1.0.8.

	* chopstx: Update to 1.8.

2018-01-18  NIIBE Yutaka  <gniibe@fsij.org>

	* src/neug.c: Update from NeuG.

2018-01-09  NIIBE Yutaka  <gniibe@fsij.org>

	* tests/card_reader.py (CardReader.ccid_power_on): Fix for
	other card readers for Gemalto's.

2017-12-19  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 1.7.

2017-11-26  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_change_password): Bug fix for admin-less
	mode.

2017-11-26  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.7.

2017-11-24  NIIBE Yutaka  <gniibe@fsij.org>

	* regnual/regnual.c (calc_crc32): Enable CRC module fix.

	* chopstx: Update to 1.6.

2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>

	* src/stack-def.h (SIZE_0): Decrease.

	* src/main.c (emit_led, display_status_code, main): Use
	chopstx_poll instead of eventflag_wait_timeout.

2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>

	* src/stack-def.h (SIZE_0): Increase.

	* src/main.c (emit_led, display_status_code, main): Use
	eventflag_wait_timeout instead of chopstx_usec_wait.

2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>

	* regnual/regnual.c (calc_crc32): Enable CRC module.

	* src/neug.c (crc32_rv_stop): New.
	(neug_fini): Call crc32_rv_stop.

	* src/main.c (main): Call chopstx_conf_idle.

	* src/usb-ccid.c (usb_event_handle): Use 2 for call of
	chopstx_conf_idle on suspend.  Call random_fini on suspend
	to stop ADC module.  Call random_init on wakeup.
	Sleep a bit to switch main thread.

2017-11-16  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (LED_OFF): New.

	* src/usb-ccid.c (usb_event_handle): LED off on sleep.
	(ccid_thread): Use constant pointer for	chopstx_poll.
	(poll_event_intr): Remove.

2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (usb_event_handle): Allow sleep on suspend.

	* src/usb_ctrl.c (usb_device_reset): Fix device state.

2017-11-14  NIIBE Yutaka  <gniibe@fsij.org>
